--- a/app/assets/stylesheets/pages/profiles/profile_page.sass
+++ b/app/assets/stylesheets/pages/profiles/profile_page.sass
@@ -1958,6 +1958,7 @@
 
 .comment_text
   word-break: break-word
+  margin-top: -3px
   b
     border: 1px solid #a5c6ea
     background: #d9eaff
@@ -2200,7 +2201,8 @@
     background-size: 100%
 
 .profile_name
-  display: inline
+  vertical-align: top
+  display: inline-block
 
 .hidden_content
   opacity: 0.5
